--- a/Templates/report_template.html
+++ b/Templates/report_template.html
@@ -30,9 +30,9 @@
         <!-- Sidebar with header and navigation -->
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <a href="#" alt="Back to top" class="header-title">
+                <h1 class="header-title"><a href="#" alt="Back to top">
                     {{FASTQC_ICON_SVG_SIDEBAR}}FastQC Report
-                </a>
+                </a></h1>
                 <div class="header-filename">
                     <p><a href="#" alt="Back to top">{{DATE}}</a></p>
                     <p><strong><a href="#" alt="Back to top">{{FILENAME}}</a></strong></p>
